--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,18 @@
 body {
   /* المطلوب الأول هنا */
+  height: 100vh;
   text-align: center;
+  background-image: url('./img/kuwaitcodes.png');
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
 }
 .card {
   /* المطلوب الثاني هنا */
   width: 400px;
   height: 500px;
   background-color: white;
+  box-shadow: 5px 5px 10px white;
+  border-radius: 12px;
 }
 
 img {
@@ -14,6 +20,12 @@ img {
   width: 120px;
   height: 120px;
   margin-top: 20px;
+  border-radius: 50%;
+  box-shadow: 5px 5px 10px black
+}
+
+h3:hover {
+  text-shadow: 0px 3px 4px black;
 }
 
 .center {
@@ -29,6 +41,7 @@ ul {
   padding: 0;
   margin: 0;
   display: inline-block;
+  list-style: none;
 }
 
 a {
